Fixed issues with alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 
 html, body {
     height: 100%;
+    min-height: 100%
     
 }
 
@@ -37,36 +38,35 @@ ul li a {
     margin: 0px auto;
     font-family: Arial, Helvetica, sans-serif;
     padding: 0;
-    height: 100px;
 }
 
 .headercont {
     float: left;
-    margin: 0 0 0 15px; 
+    margin: 15px 15px 15px 0;
     color: #eeeeee;
     background-color:#4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 10px;
-    width: 960px;
+    /* width: 960px; */
 }
 
 nav  {
-    /* width: 100%;
+    width: 100%;
     height: 77px;
     position: absolute;
-    /* top: -5px; */
-    /* right: 432px; */
-    /* border-bottom: 1px solid black;   */ 
+    top: -5px;
+    right: 432px;
+    border-bottom: 1px solid black;   
     float: right
 }
 
 main {
     max-width: 960px;
-    /* float: left;  */
+    float: left;  
     color: #777777;
-    /* border: 1px black solid;; */
-    /* padding: 10px; */
-    /* margin: 15px; */
+    border: 1px black solid;
+    padding: 10px; 
+    margin: 15px 15px 15px 0;
     background-color:#ffffff;
 
     
@@ -74,9 +74,9 @@ main {
 
 footer {
     background-color: #666666;
-    float: left;
-    margin: 0 0 0 15px;
-    width: 100%;
+    clear: both;
+    width: 100; 
     border-top: 10px solid #4aaaa5;
     text-align: center
+    bottom: 0;
 }
